--- a/src/amazingShop.Api/appsettings.json
+++ b/src/amazingShop.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AmazingShop": "Data Source = SL-002501; Initial Catalog = AmazingShop; User ID=sa;Password=sqlcwi@123;Application Name=AmazingShopAPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
