--- a/src/amazingShop.Api/amazingShop.Api.csproj
+++ b/src/amazingShop.Api/amazingShop.Api.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\amazingShop.Domain.Core\amazingShop.Domain.Core.csproj" />
+    <ProjectReference Include="..\amazingShop.Domain\amazingShop.Domain.csproj" />
+    <ProjectReference Include="..\amazingShop.Infra\amazingShop.Infra.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Events\" />
   </ItemGroup>
 
   <ItemGroup>
