--- a/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
+++ b/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
@@ -5,4 +5,8 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="jil" Version="2.17.0" />
+  </ItemGroup>
+
 </Project>
