--- a/src/amazingShop.Api/amazingShop.Api.csproj
+++ b/src/amazingShop.Api/amazingShop.Api.csproj
@@ -13,10 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Events\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Askmethat.Aspnet.JsonLocalizer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
