--- a/src/amazingShop.Api/amazingShop.Api.csproj
+++ b/src/amazingShop.Api/amazingShop.Api.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\amazingShop.Domain.Core\amazingShop.Domain.Core.csproj" />
     <ProjectReference Include="..\amazingShop.Domain\amazingShop.Domain.csproj" />
     <ProjectReference Include="..\amazingShop.Infra\amazingShop.Infra.csproj" />
+    <ProjectReference Include="..\amazingShop.Application\amazingShop.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,10 +18,13 @@
 
   <ItemGroup>
     <PackageReference Include="Askmethat.Aspnet.JsonLocalizer" Version="2.2.0" />
+    <PackageReference Include="mediatr" Version="8.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
