--- a/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
+++ b/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
@@ -5,4 +5,9 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="mediatr" Version="8.0.1" />
+    <PackageReference Include="System.Text.Json" Version="4.7.1" />
+  </ItemGroup>
+
 </Project>
