--- a/src/amazingShop.Application/amazingShop.Application.csproj
+++ b/src/amazingShop.Application/amazingShop.Application.csproj
@@ -13,6 +13,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
