--- a/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
+++ b/src/amazingShop.Domain.Core/amazingShop.Domain.Core.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="mediatr" Version="8.0.1" />
-    <PackageReference Include="System.Text.Json" Version="4.7.1" />
   </ItemGroup>
 
 </Project>
