--- a/src/amazingShop.Domain/amazingShop.Domain.csproj
+++ b/src/amazingShop.Domain/amazingShop.Domain.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -9,5 +9,6 @@
   <ItemGroup>
     <ProjectReference Include="..\amazingShop.Domain.Core\amazingShop.Domain.Core.csproj" />
   </ItemGroup>
+
 
 </Project>
